--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "angular-date-value-accessor": "0.0.2",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
-    "moment": "^2.19.2",
+    "moment": "^2.22.2",
+    "package-lock.json": "^1.0.0",
     "rxjs": "^5.4.2",
     "underscore": "^1.8.3",
     "zone.js": "^0.8.14"
@@ -46,7 +47,7 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
+    "protractor": "^5.4.1",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
     "typescript": "~2.3.3"
